[gd_scene load_steps=44 format=3 uid="uid://dytjcokiwbrry"]

[ext_resource type="Script" uid="uid://lfm6nu1gwxb5" path="res://entities/Zombie.gd" id="1_gjq5t"]
[ext_resource type="Texture2D" uid="uid://mceolftjq0jp" path="res://sprites/zombies/zombieBasic/Zombie 4_idle.png" id="2_6mbcr"]
[ext_resource type="Texture2D" uid="uid://b2mc144qe8xeg" path="res://sprites/zombies/zombieBasic/Zombie 4_death 4.png" id="2_l1qdh"]
[ext_resource type="Texture2D" uid="uid://drj6mnspd2k8y" path="res://sprites/zombies/zombieBasic/Zombie 4_hit.png" id="3_pqq4r"]
[ext_resource type="Texture2D" uid="uid://barr7expkpo77" path="res://sprites/zombies/zombieBasic/Zombie 4_knocked .png" id="4_i25m1"]
[ext_resource type="Texture2D" uid="uid://3uvosuupf7jv" path="res://sprites/zombies/zombieBasic/Zombie 4_run.png" id="5_8olfw"]

[sub_resource type="CircleShape2D" id="CircleShape2D_q6uwi"]
radius = 12.0

[sub_resource type="AtlasTexture" id="AtlasTexture_nswy3"]
atlas = ExtResource("2_l1qdh")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4bumh"]
atlas = ExtResource("2_l1qdh")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tseq0"]
atlas = ExtResource("2_l1qdh")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l1o5o"]
atlas = ExtResource("2_l1qdh")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tfdn2"]
atlas = ExtResource("2_l1qdh")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7tmu0"]
atlas = ExtResource("2_l1qdh")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wwun5"]
atlas = ExtResource("2_l1qdh")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jpnnd"]
atlas = ExtResource("2_l1qdh")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_adsyg"]
atlas = ExtResource("3_pqq4r")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iwqt7"]
atlas = ExtResource("3_pqq4r")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m4r8e"]
atlas = ExtResource("3_pqq4r")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1if3s"]
atlas = ExtResource("2_6mbcr")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ods0y"]
atlas = ExtResource("2_6mbcr")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pdlj2"]
atlas = ExtResource("2_6mbcr")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fv0t5"]
atlas = ExtResource("2_6mbcr")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i2wmu"]
atlas = ExtResource("2_6mbcr")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0vkkx"]
atlas = ExtResource("2_6mbcr")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3vjcm"]
atlas = ExtResource("4_i25m1")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s140b"]
atlas = ExtResource("4_i25m1")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7t0nl"]
atlas = ExtResource("4_i25m1")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t516e"]
atlas = ExtResource("4_i25m1")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t553y"]
atlas = ExtResource("4_i25m1")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kv3li"]
atlas = ExtResource("4_i25m1")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8mkit"]
atlas = ExtResource("5_8olfw")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cw5iy"]
atlas = ExtResource("5_8olfw")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bihbe"]
atlas = ExtResource("5_8olfw")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j8wr1"]
atlas = ExtResource("5_8olfw")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k72ww"]
atlas = ExtResource("5_8olfw")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lkxn3"]
atlas = ExtResource("5_8olfw")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2aw5p"]
atlas = ExtResource("5_8olfw")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_marbj"]
atlas = ExtResource("5_8olfw")
region = Rect2(224, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_hul3c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nswy3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4bumh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tseq0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l1o5o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tfdn2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7tmu0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wwun5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jpnnd")
}],
"loop": false,
"name": &"death",
"speed": 8.0
}, {
"frames": [{
"duration": 0.4,
"texture": SubResource("AtlasTexture_adsyg")
}, {
"duration": 0.4,
"texture": SubResource("AtlasTexture_iwqt7")
}, {
"duration": 0.4,
"texture": SubResource("AtlasTexture_m4r8e")
}],
"loop": false,
"name": &"hit",
"speed": 5.0
}, {
"frames": [{
"duration": 0.8,
"texture": SubResource("AtlasTexture_1if3s")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_ods0y")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_pdlj2")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_fv0t5")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_i2wmu")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_0vkkx")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 0.5,
"texture": SubResource("AtlasTexture_3vjcm")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_s140b")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_7t0nl")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_t516e")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_t553y")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_kv3li")
}],
"loop": false,
"name": &"knocked",
"speed": 5.0
}, {
"frames": [{
"duration": 0.6,
"texture": SubResource("AtlasTexture_8mkit")
}, {
"duration": 0.6,
"texture": SubResource("AtlasTexture_cw5iy")
}, {
"duration": 0.6,
"texture": SubResource("AtlasTexture_bihbe")
}, {
"duration": 0.6,
"texture": SubResource("AtlasTexture_j8wr1")
}, {
"duration": 0.6,
"texture": SubResource("AtlasTexture_k72ww")
}, {
"duration": 0.6,
"texture": SubResource("AtlasTexture_lkxn3")
}, {
"duration": 0.6,
"texture": SubResource("AtlasTexture_2aw5p")
}, {
"duration": 0.6,
"texture": SubResource("AtlasTexture_marbj")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="Animation" id="Animation_c1jmx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_fcl6p"]
resource_name = "zombie_idle"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e87v0"]
_data = {
&"RESET": SubResource("Animation_c1jmx"),
&"zombie_idle": SubResource("Animation_fcl6p")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_jl6s7"]
radius = 500.0

[node name="Zombie" type="CharacterBody2D" groups=["enemy"]]
scale = Vector2(6, 6)
collision_layer = 3
collision_mask = 3
script = ExtResource("1_gjq5t")
speed = 90.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
scale = Vector2(0.17, 0.17)
shape = SubResource("CircleShape2D_q6uwi")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.15, 0.15)
sprite_frames = SubResource("SpriteFrames_hul3c")
animation = &"idle"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_e87v0")
}

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[node name="HitTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_jl6s7")

[node name="HealthLabel" type="Label" parent="."]
visible = false
offset_left = -26.0
offset_top = -32.0
offset_right = 26.0
offset_bottom = -16.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 10
text = "HP: 100"
horizontal_alignment = 1

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="HitTimer" to="." method="_on_hit_timer_timeout"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
